opus: make it build against current, and remove cruft

https://bugzilla.gnome.org/show_bug.cgi?id=660364